@@ -1505,10 +1505,13 @@ do_who (int argc, const string_vector& argv, bool return_list,
 	      for (std::list<symbol_table::symbol_record>::const_iterator p = tmp.begin ();
 		   p != tmp.end (); p++)
 		{
-		  if (verbose)
-		    symbol_stats.append (*p);
-		  else
-		    symbol_names.push_back (p->name ());
+                  if (p->is_defined ())
+                    {
+                      if (verbose)
+                        symbol_stats.append (*p);
+                      else
+                        symbol_names.push_back (p->name ());
+                    }
 		}
 	    }
 	}
