@@ -1,3 +1,7 @@
+2009-05-25  Jaroslav Hajek  <highegg@gmail.com>
+
+	* variables.cc (do_who): Only output symbols with a defined value.
+
 2009-05-22  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* toplev.h (main_loop): Tag with OCTINTERP_API.
